--- a/src/app/components/geodata-card/geodata-card.component.html
+++ b/src/app/components/geodata-card/geodata-card.component.html
@@ -1,9 +1,12 @@
-<div class="geo-data-card">
-    <div>{{geoData.name}}</div>
-    <div>{{ countryName }}</div>
-    <div>{{+geoData.latitude.toFixed(2)}}</div>
-    <div>{{+geoData.longitude.toFixed(2)}}</div>
-    <div>
-        <button (click)="onSearchWeatherInfo(geoData.latitude, geoData.longitude)">Ezt keresem</button>
-    </div>
+<div  class="geo-data-card">
+	<div>{{geoData.name}}</div>
+	<div>{{ countryName }}</div>
+	<div>{{geoData.state ? geoData.state :  "-"}}</div>
+	<div>{{+geoData.latitude.toFixed(2)}}</div>
+	<div>{{+geoData.longitude.toFixed(2)}}</div>
+	<div>
+		<button (click)="onSearchWeatherInfo(geoData.latitude, geoData.longitude)">
+			Ezt keresem
+		</button>
+	</div>
 </div>
