--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -6,3 +6,20 @@
 	justify-content: center;
 	align-items: center;
 }
+
+.geo-data-card-table {
+    border: 1px dotted black;
+    width: 600px;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+}
+
+.geo-data-card-table > div {
+    border-right: 1px solid black;
+    min-height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    overflow-y: auto;
+}
