--- a/src/app/components/geodata-card/geodata-card.component.html
+++ b/src/app/components/geodata-card/geodata-card.component.html
@@ -4,8 +4,8 @@
 	<div>{{geoData.state ? geoData.state :  "-"}}</div>
 	<div>{{+geoData.latitude.toFixed(2)}}</div>
 	<div>{{+geoData.longitude.toFixed(2)}}</div>
-	<div>
-		<button (click)="onSearchWeatherInfo(geoData.latitude, geoData.longitude)">
+	<div class="geodata-button-wrap">
+		<button class="geodata-button" (click)="onSearchWeatherInfo(geoData.latitude, geoData.longitude)">
 			Ezt keresem
 		</button>
 	</div>
