--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -8,14 +8,18 @@
 }
 
 .geo-data-card-table {
-    border: 1px dotted black;
-    width: 600px;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
+	border: 1px solid rgb(206, 206, 206);
+    border-radius: 4px;
+	width: 600px;
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	margin-bottom: 5px;
+	box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    font-weight: bold;
+    background-color: rgb(177, 177, 177);
 }
 
 .geo-data-card-table > div {
-    border-right: 1px solid black;
     min-height: 35px;
     display: flex;
     justify-content: center;
