--- a/src/app/components/geodata-card/geodata-card.component.html
+++ b/src/app/components/geodata-card/geodata-card.component.html
@@ -6,7 +6,7 @@
 	<div>{{+geoData.longitude.toFixed(2)}}</div>
 	<div class="geodata-button-wrap">
 		<button class="geodata-button" (click)="onSearchWeatherInfo(geoData.latitude, geoData.longitude)">
-			Ezt keresem
+			That's it!
 		</button>
 	</div>
 </div>
