--- a/src/app/components/time-info-card/time-info-card.component.html
+++ b/src/app/components/time-info-card/time-info-card.component.html
@@ -1,7 +1,12 @@
 <div class="time-info-card" *ngIf="timeInfo$ | async; let info">
     <!-- <div>{{info?.localTime}}</div>
     <div>{{info?.ianaTimeId}}</div> -->
-    <div>Helyi idő: {{localTime}}</div>
-    <div>Időzóna: {{info?.displayName}}</div>
- 
+    <div class="time-info-content local-time">
+        <div class="description">Current local time:</div>
+        <div class="info">{{localTime}}</div>
+    </div>
+    <div class="time-info-content time-zone">
+        <div class="description">Time zone:</div>
+        <div class="info">{{info?.displayName}}</div>
+    </div>
 </div>
