--- a/src/app/components/city-search-error/city-search-error.component.css
+++ b/src/app/components/city-search-error/city-search-error.component.css
@@ -27,6 +27,17 @@
     0 12px 24px rgba(0, 0, 0, 0.2); /* Darker shadow for bottom layer */
     font-size: 1.5rem;
     text-align: center;
+
+    animation: slideDown 1s ease forwards;
+}
+
+@keyframes slideDown {
+    from {
+        top: -220px; 
+    }
+    to {
+        top: 200px; 
+    }
 }
 
 .close-box-button {
