--- a/src/app/components/weather-info-card/weather-info-card.component.css
+++ b/src/app/components/weather-info-card/weather-info-card.component.css
@@ -1,8 +1,12 @@
 
 .weather-info-card-wrap {
-    width: 320px;
-    margin: 10px auto;
-    border: 1px solid black;
+    
+        border: 1px solid rgb(206, 206, 206);
+        border-radius: 4px;
+        width: 600px;
+        margin: 0 auto 10px;
+        box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    
 
 }
 
