--- a/src/app/components/weather-info-card/weather-info-card.component.css
+++ b/src/app/components/weather-info-card/weather-info-card.component.css
@@ -34,5 +34,14 @@
     align-items: center;
 }
 
+.aqi-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 25px;
+    margin: 20px auto;
+}
+
 
 
