--- a/src/app/components/weather-info-card/weather-info-card.component.html
+++ b/src/app/components/weather-info-card/weather-info-card.component.html
@@ -56,20 +56,9 @@
             <div>{{convertEpochTime(weatherData.sys.sunset) | date:'yyyy:MM:dd HH:mm'}}</div>
     </div>
 
-    <!-- <div class="sunrise">
-            <div>Napfelkelte (helyi idő szerint):</div>
-            <div>{{convertEpochLocalTime(weatherData.sys.sunrise, weatherData.timezone) | date:'yyyy:MM:dd HH:mm'}}</div>
-    </div>
 
-    <div class="sunfall">
-            <div>Naplemente: (helyi idő szerint)</div>
-            <div>{{convertEpochLocalTime(weatherData.sys.sunset, weatherData.timezone) | date:'yyyy:MM:dd HH:mm'}}</div>
-    </div>
-
-    <div class="shift">
-            <div>utc: </div>
-            <div>{{weatherData.timezone}}</div>
-    </div> -->
-
+	
+		<button class="aqi-button" (click)="onSendCoordinates()">Air quality Info</button>
+	
 
 </div>
