routing for pollution info

--- a/src/app/components/weather-info-card/weather-info-card.component.html
+++ b/src/app/components/weather-info-card/weather-info-card.component.html
@@ -58,7 +58,7 @@
 
 
 	
-		<button class="aqi-button" (click)="onSendCoordinates()">Air quality Info</button>
+		<button class="aqi-button" (click)="onSendCoordinates()" routerLink="/pollution-info-page">Air quality Info</button>
 	
 
 </div>
